{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 54,
  "lineage": "f00b20d7-7f21-951a-b2dc-4bc5fe2ac883",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ansible_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.170.196.165",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-19T06:52:21.460-07:00",
            "id": "projects/meta-territory-393217/regions/us-central1/addresses/ansible-public-ip",
            "name": "ansible-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "meta-territory-393217",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/addresses/ansible-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/instances/ansible"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "dc1_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.170.67.53",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-19T06:52:21.607-07:00",
            "id": "projects/meta-territory-393217/regions/us-central1/addresses/dc1-public-ip",
            "name": "dc1-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "meta-territory-393217",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/addresses/dc1-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/instances/dc1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "dc2_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.69.219.224",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-19T06:52:21.584-07:00",
            "id": "projects/meta-territory-393217/regions/us-central1/addresses/dc2-public-ip",
            "name": "dc2-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "meta-territory-393217",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/addresses/dc2-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-b/instances/dc2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_ping_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-19T06:52:41.678-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/meta-territory-393217/global/firewalls/allow-ssh-ping-linux",
            "log_config": [],
            "name": "allow-ssh-ping-linux",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
            "priority": 1000,
            "project": "meta-territory-393217",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/firewalls/allow-ssh-ping-linux",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_ping_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5985"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-19T06:52:42.689-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/meta-territory-393217/global/firewalls/allow-ssh-ping-windows",
            "log_config": [],
            "name": "allow-ssh-ping-windows",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
            "priority": 1000,
            "project": "meta-territory-393217",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/firewalls/allow-ssh-ping-windows",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20230711",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/disks/ansible"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-central1-a/instances/ansible",
            "instance_id": "5124608560982751188",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "mQpX6B_g_Ss=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y ansible\r\n",
            "name": "ansible",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.196.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/linux-subnet",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/instances/ansible",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.ansible_public_ip",
            "google_compute_network.my_network",
            "google_compute_subnetwork.linux_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230510",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/disks/dc1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-central1-a/instances/dc1",
            "instance_id": "7864160614741800778",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "6SAVWwZ_djU=",
            "metadata_startup_script": "#!/bin/bash\r\n# Add your startup script commands here\r\n",
            "name": "dc1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.67.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/instances/dc1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.dc1_public_ip",
            "google_compute_network.my_network",
            "google_compute_subnetwork.windows_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230510",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-b/disks/dc2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-central1-b/instances/dc2",
            "instance_id": "1432338555158230857",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "6SAVWwZ_djU=",
            "metadata_startup_script": "#!/bin/bash\r\n# Add your startup script commands here\r\n",
            "name": "dc2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.219.224",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-b/instances/dc2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_address.dc2_public_ip",
            "google_compute_network.my_network",
            "google_compute_subnetwork.windows_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dfs1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230510",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/disks/dfs1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-central1-a/instances/dfs1",
            "instance_id": "6361630636256360267",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "6SAVWwZ_djU=",
            "metadata_startup_script": "#!/bin/bash\r\n# Add your startup script commands here\r\n",
            "name": "dfs1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-a/instances/dfs1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.windows_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dfs2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230510",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-b/disks/dfs2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-central1-b/instances/dfs2",
            "instance_id": "6712112805267208010",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "6SAVWwZ_djU=",
            "metadata_startup_script": "#!/bin/bash\r\n# Add your startup script commands here\r\n",
            "name": "dfs2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-central1-b/instances/dfs2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.windows_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dfs3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20230510",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-east1-b/disks/dfs3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/meta-territory-393217/zones/us-east1-b/instances/dfs3",
            "instance_id": "1121859793146705739",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "6SAVWwZ_djU=",
            "metadata_startup_script": "#!/bin/bash\r\n# Add your startup script commands here\r\n",
            "name": "dfs3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-east1/subnetworks/windows-subnet-east1",
                "subnetwork_project": "meta-territory-393217"
              }
            ],
            "project": "meta-territory-393217",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/zones/us-east1-b/instances/dfs3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.windows_subnet_east1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/meta-territory-393217/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "meta-territory-393217",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "linux_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-19T06:52:42.690-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/meta-territory-393217/regions/us-central1/subnetworks/linux-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "linux-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "meta-territory-393217",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/linux-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "windows_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-19T06:52:42.840-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "windows-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "meta-territory-393217",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-central1/subnetworks/windows-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "windows_subnet_east1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-19T06:52:44.509-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/meta-territory-393217/regions/us-east1/subnetworks/windows-subnet-east1",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "windows-subnet-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "meta-territory-393217",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/meta-territory-393217/regions/us-east1/subnetworks/windows-subnet-east1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    }
  ]
}